[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpuopt-runtime"
version = "0.1.0"
description = "Correctness-gated CUDA Graph pooling for Hugging Face greedy decoding"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ethan Lopez"}]
license = {file = "LICENSE"}
keywords = [
  "cuda",
  "cuda-graphs",
  "gpu",
  "hugging-face",
  "llm",
  "llm-inference",
  "pytorch",
]
dependencies = [
  "torch>=2.4",
  "transformers>=5.8,<6",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/el0px/gpuopt-runtime"
Source = "https://github.com/el0px/gpuopt-runtime"
Issues = "https://github.com/el0px/gpuopt-runtime/issues"
PyPI = "https://pypi.org/project/gpuopt-runtime/"

[project.optional-dependencies]
examples = ["accelerate>=1.0", "safetensors>=0.4"]
test = ["pytest>=8"]
build = ["build>=1.2", "twine>=5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
